# verivote-new-

./: README.md
verivote-main (1)/verivote-main/apps/api_py/: README.md  pyproject.toml
verivote-main (1)/verivote-main/apps/api_py/app/: __init__.py  main.py
verivote-main (1)/verivote-main/apps/api_py/app/api/: router.py
verivote-main (1)/verivote-main/apps/api_py/app/core/: __init__.py  config.py  errors.py  security.py
verivote-main (1)/verivote-main/apps/api_py/app/crypto/: __init__.py  canonical_json.py  commitment_v2.py  eligibility.py  hash_utils.py  merkle.py  receipt_chain.py  sealed_vote.py
verivote-main (1)/verivote-main/apps/api_py/app/models/: abp.py
verivote-main (1)/verivote-main/apps/api_py/app/repositories/: memory.py
verivote-main (1)/verivote-main/apps/api_py/app/schemas/: abp.py
verivote-main (1)/verivote-main/apps/api_py/app/services/: attack_service.py  audit_service.py  ballot_service.py  blockchain_service.py  election_service.py  eligibility_service.py  tally_service.py  zk_service.py
verivote-main (1)/verivote-main/apps/api_py/app/tests/: __init__.py  conftest.py  test_abp_cast_ballot.py  test_abp_cast_with_proof.py  test_abp_models.py  test_attack_detection.py  test_basic_flow.py  test_commitment_v2.py  test_eligibility.py  test_eligibility_api.py  test_frontend_v2_integration.py  test_hash_utils.py  test_health.py  test_private_valid_vote_interface.py  test_private_valid_vote_real_wrapper.py  test_sealed_vote.py
verivote-main (1)/verivote-main/apps/api_py/app/zk/: __init__.py  private_valid_vote.py
(+57 files in other folders)
